# foray_example

./: README.md  pyproject.toml
data/: my_file.npy
networks/: fft_lowpass.network  new_net.network  read_write_npy.network  small_img.network
src/foray_example/: __init__.py
src/foray_example/foray/: circle_mask.py  fft.py  ifft.py  multiply.py  parameter_showcase.py  read_npy.py  shepp_logan.py  write_npy.py
